...
                      crossAxisAlignment: CrossAxisAlignment.center,
                      children: [
                        Expanded(
                          child: SizedBox(
                            height: controlH,
                            child: ElevatedButton(
                              key: const Key('addToCart'),
                              onPressed: () {
                                Cart.instance.add(
                                  CartItem(
                                    id: product.id,
                                    name: product.name,
                                    img: img,
...
